--- a/render.yaml
+++ b/render.yaml
@@ -9,3 +9,9 @@ services:
         value: 3.11.0
       - key: FLASK_ENV
         value: production
+      - key: RENDER
+        value: "true"
+    disk:
+      name: data
+      mountPath: /data
+      sizeGB: 1
