--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,10 @@ services:
   - type: web
     name: seo-tracker
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install -r requirements.txt
+      mkdir -p /data
+      chmod 777 /data
     startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
