--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,11 @@ services:
   - type: web
     name: seo-tracker
     env: python
-    buildCommand: |
-      pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt
+    startCommand: |
       mkdir -p /data
       chmod 777 /data
-    startCommand: gunicorn app:app
+      gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
