fix: simplify database initialization for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,7 @@ services:
     name: seo-tracker
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: |
-      mkdir -p /data && \
-      chmod 777 /data && \
-      gunicorn app:app
+    startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
