--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,7 @@ services:
     name: seo-tracker
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: |
-      mkdir -p /data &&
-      touch /data/seo_tracker.db &&
-      chmod 777 /data/seo_tracker.db &&
-      gunicorn app:app
+    startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
@@ -15,7 +11,6 @@ services:
         value: production
       - key: RENDER
         value: "true"
-    disk:
-      name: data
-      mountPath: /data
-      sizeGB: 1
+    databases:
+      - name: seo_tracker_db
+        plan: free
