--- a/render.yaml
+++ b/render.yaml
@@ -11,6 +11,11 @@ services:
         value: production
       - key: RENDER
         value: "true"
+      - key: DATABASE_URL
+        fromDatabase:
+          name: seo_tracker_db
+          property: connectionString
     databases:
       - name: seo_tracker_db
         plan: free
+        ipAllowList: []
